@@ -1,6 +1,7 @@
 dpkg (1.17.2) UNRELEASED; urgency=low
 
-  *
+  * Make Dpkg::Arch debwildcard_to_debtriplet() more robust by matching
+    on exact 'any' strings, instead of substrings.
 
  -- Guillem Jover <guillem@debian.org>  Sun, 28 Jul 2013 15:06:29 +0200
 
